fix(header): spacing above header after scroll

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,7 +2,7 @@
 
 .header {	
 	position: sticky;
-	top: 0;
+	top: 1.5rem;
 	margin-block-start: 1.5rem;
 	z-index: 10;
 
